<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical">

    <TextView
        android:id="@+id/createText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@android:color/white"
        android:text="@string/createUser2" />


    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/createText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:text="@string/realName" />


    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/name"
        android:background="@android:color/white"
        android:text="@string/userName" />


    <TextView
        android:id="@+id/userboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userName"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@android:color/white"
        android:text="@string/userBoard" />

    <Button
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="goToMain"
        android:text="@string/goBack" />

    <Button
        android:id="@+id/bnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bnSave"
        android:layout_above="@id/quit"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_orange_dark"
        android:onClick="saveUser"
        />


</RelativeLayout>